; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_ultrastor.c_find_and_clear_bit_16.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_ultrastor.c_find_and_clear_bit_16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"No free mscp\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64*)* @find_and_clear_bit_16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_and_clear_bit_16(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca i32, align 4
  store i64* %0, i64** %2, align 8
  %4 = load i64*, i64** %2, align 8
  %5 = load i64, i64* %4, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 @panic(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  br label %9

9:                                                ; preds = %7, %1
  %10 = load i64*, i64** %2, align 8
  %11 = call i32 asm sideeffect "xorl $0,$0\0A\090: bsfw $1,${0:w}\0A\09btr $0,$1\0A\09jnc 0b", "=&r,=*m,~{dirflag},~{fpsr},~{flags}"(i64* %10) #2, !srcloc !2
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  ret i32 %12
}

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 317, i32 330, i32 352, i32 369}
